# tabpfn-rank

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: default.yaml
experiments/: plot_phase1_results.py  plot_tabpfn_adapter_comparison.py  run_benchmark.py  run_phase1_decision.py  run_phase1_low_data.py
paper/: phase2_medium_article.md
paper/figures/: visual1_tabpfn_pipeline.pptx
paper/phase2_pointwise/: aggregated_results.csv  amazon_sanity_results.csv  benchmark.md  best_tree_selection.json  bootstrap_delta_summary.csv  decision.md  feature_group_ablation.csv  k_sensitivity_results.csv  raw_results_archive_manifest.json  raw_summary.csv
src/recpfn/: __init__.py  benchmark_runner.py  cli.py  exceptions.py  phase1_decision.py  phase1_low_data.py  phase2_pointwise_report.py  phase2_pointwise_run.py  phase2_pointwise_shared.py  types.py  unit_runner.py  utils.py
src/recpfn/data/: __init__.py  history.py  loaders.py  schemas.py  splits.py
src/recpfn/eval/: __init__.py  metrics.py  ranking.py  reports.py
src/recpfn/features/: __init__.py  builders.py  cold_start.py  groups.py  interactions.py
src/recpfn/models/: __init__.py  base.py  catboost_ranker.py  tabpfn_pairwise.py  tabpfn_pointwise.py  xgboost_ranker.py
src/recpfn/rerank/: __init__.py  candidate_sets.py  pipeline.py
tests/: test_candidates.py  test_features.py  test_loaders.py  test_metrics.py  test_phase1_decision.py  test_phase1_low_data.py  test_phase2_pointwise.py  test_pipeline.py  test_splits.py  test_tabpfn_adapter_comparison.py
