[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "recpfn"
version = "0.1.0"
description = "Paper-first experiments for small-data candidate reranking with TabPFN and tabular baselines."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
